@@ -1,3 +1,7 @@
+3537.	[tuning]	Slave zones, when updated, now send NOTIFY messages
+			to peers before being dumped to disk rather than
+			after. [RT #27242]
+
 3536.	[func]		Add support for setting Differentiated Services Code
 			Point (DSCP) values in named.  Most configuration
 			options which take a "port" option (e.g.,
